[package]
name = "fluorine-moment"
version = "0.1.0"
authors = ["Zacharie Dubrulle <dubrullezacharie@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
getrandom = { version = "0.2.15", features = ["js"] }
manganis = "0.2.2"
web-sys = "0.3.74"
